add css by hand and add description to links

--- a/presalesite/design/templates/design/design_list.html
+++ b/presalesite/design/templates/design/design_list.html
@@ -5,7 +5,7 @@
     <form method="POST" onsubmit="return submitForm();">
       {% csrf_token %}
 
-    <details>
+    <details style="margin-top:25px;">
 
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Проектно-изыскательские работы
