--- a/presalesite/rates/templates/rates/rates_list.html
+++ b/presalesite/rates/templates/rates/rates_list.html
@@ -5,7 +5,7 @@
       <form method="POST" onsubmit="return validateForm();">
         {% csrf_token %}
 
-            <details>
+            <details style="margin-top:25px;">
                 <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
                 >Необходимо выбрать, кто будет производить работы: инженер или архитектор
                 </summary>
