--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -2,15 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<!-- <link rel="shortcut icon" href="{% static 'esoterics/images/icon.jpg' %}" type="image/x-icon"/> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
-    {% block title %}
-    <title>PRE-SALE</title>
-    {% endblock %}
+	{% block title %}
+	<title>PRE-SALE</title>
+	{% endblock %}
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
@@ -18,23 +17,23 @@
 			<ul class="nav nav-pills nav-fill">
 			<!--<ul class="nav flex-column"> --- gorizontal navbar --- -->
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="{% url 'Home' %}">Home</a>
+					<a class="nav-item nav-link" title="Главная страница" href="{% url 'Home' %}">Home</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="{% url 'Rates' %}">Rates</a>
+					<a class="nav-item nav-link" title="Стоимости/коэффициенты" href="{% url 'Rates' %}">Rates</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="{% url 'Design' %}">Design</a>
+					<a class="nav-item nav-link" title="Проектно-изыскательские работы" href="{% url 'Design' %}">Design</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="{% url 'Examination' %}">Examination</a>
+					<a class="nav-item nav-link" title="Обследование СПД" href="{% url 'Examination' %}">Examination</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="{% url 'Poc' %}">PoC</a>
+					<a class="nav-item nav-link" title="Стендирование" href="{% url 'Poc' %}">PoC</a>
 				  </li>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-item nav-link" href="{% url 'Output' %}">Output</a>
+				  <a class="nav-item nav-link" title="Финальное КП" href="{% url 'Output' %}">Output</a>
 				</li>
 				  <!--  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Install</a>
