--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
-<p>Главная страница</p>  
+  <div class="container">
+    <p>Главная страница</p>  
+    <div>
+      <video width="100%" height="100%" autoplay loop muted>
+        <source src="{% static 'my_video.mp4' %}" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </div>
 {% endblock %}
