--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -11,7 +11,7 @@
 	<title>PRE-SALE</title>
 	{% endblock %}
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left:25px">
 		<div class="container-fluid">
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="nav nav-pills nav-fill">
