--- a/presalesite/design/templates/design/design_list.html
+++ b/presalesite/design/templates/design/design_list.html
@@ -7,10 +7,12 @@
 
     <details style="margin-top:25px;">
 
+      <form onsubmit="return validateForm()">
+
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Проектно-изыскательские работы
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Проектно-изыскательские работы" name="Проектно-изыскательские работы" />
+      <input type="number" step="0.1" id="Проектно-изыскательские работы" name="Проектно-изыскательские работы" required />
       </summary>
       <ul>
         <li class="item1">
@@ -460,6 +462,19 @@
             document.getElementById('list-form').submit();
           }
       }
+
+
+        function validateForm() {
+          var inputs = document.getElementsByTagName("input");
+          for (var i = 0; i < inputs.length; i++) {
+            if (inputs[i].hasAttribute("required") && inputs[i].value === "") {
+              alert("Пожалуйста, укажите трудозатраты, дней");
+              return false;
+            }
+          }
+          return true;
+        }
+
     </script>
 
 
@@ -469,6 +484,7 @@
   </div>
   <a style="margin-left:20px;" class="btn btn-danger" href='delete'>Очистить</a>
   </div>
+</form>
   </form>
 
     {% endblock %} 
