--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -1,15 +1,91 @@
-{% extends 'base.html' %}
-
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<link rel="stylesheet" href="{% static 'css/bootstrap_mainpage.css' %}">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<!-- <link rel="shortcut icon" href="{% static 'esoterics/images/icon.jpg' %}" type="image/x-icon"/> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
+	{% block title %}
+	<title>PRE-SALE</title>
+	{% endblock %}
 
-{% block content %}
-  <div class="container">
-    <p>Главная страница</p>  
-    <div>
-      <video width="100%" height="100%" autoplay loop muted>
-        <source src="{% static 'my_video.mp4' %}" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left:25px; margin-right:25px">
+		<div class="container-fluid">
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="nav nav-pills nav-fill">
+			<!--<ul class="nav flex-column"> --- gorizontal navbar --- -->
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Главная страница" href="{% url 'Home' %}">Home</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Стоимости/коэффициенты" href="{% url 'Rates' %}">Rates</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Проектно-изыскательские работы" href="{% url 'Design' %}">Design</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Обследование СПД" href="{% url 'Examination' %}">Examination</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Стендирование" href="{% url 'Poc' %}">PoC</a>
+				  </li>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-item nav-link" title="Финальное КП" href="{% url 'Output' %}">Output</a>
+				</li>
+				  <!--  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Install</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Comissioning</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Accept</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Migration</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Other Jobs</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Subcontractor</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Other</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Unexpected</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">BusinessTrip</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" href="">Rates</a>
+				  </li> -->
+			</ul>
+		  </div>
+		</div>
+	  </nav>
+</head>
+
+	<body>
+	  {% block content %}
+    <div class="intro" style="margin-top:25px;">
+      <div class="video">
+          <video class="video__media" src="{% static 'coverr-typing.mp4' %}" autoplay muted loop></video>
+      </div>
+
+      <div class="intro__content">
+            <div class="container">
+				<h1 class="intro_1">Приветствую тебя на сайте, который поможет тебе сформировать КП на работы!
+					Для того чтобы сформировать КП необходимо пройтись по вкладкам, выбрать необходимые работы и указать количество рабочих дней
+					Затем можно софрмировать КП в формате Excel</h1>
+            </div>
+      </div>
   </div>
-{% endblock %}
+	  {% endblock %}
+	</body>
+</html>
