--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -4,7 +4,6 @@
 <head>
 	<link rel="stylesheet" href="{% static 'css/bootstrap_mainpage.css' %}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<!-- <link rel="shortcut icon" href="{% static 'esoterics/images/icon.jpg' %}" type="image/x-icon"/> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
 	{% block title %}
@@ -80,10 +79,10 @@
 
       <div class="intro__content">
             <div class="container">
-				<h1 class="intro_1">Приветствую тебя на сайте, который поможет тебе сформировать КП на работы!
-					Для того чтобы сформировать КП необходимо пройтись по вкладкам, выбрать необходимые работы и указать количество рабочих дней
-					Затем можно софрмировать КП в формате Excel</h1>
-            </div>
+				<div class="visible">
+					<h1 class="intro_1">Приветствую тебя на сайте, который поможет тебе сформировать КП на работы! Для того чтобы сформировать КП необходимо пройтись по вкладкам, выбрать необходимые работы и указать количество рабочих дней. Затем можно софрмировать КП в формате Excel</h1>
+				</div>
+			</div>
       </div>
   </div>
 	  {% endblock %}
