--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -9,8 +9,7 @@
 	{% block title %}
 	<title>PRE-SALE</title>
 	{% endblock %}
-
-	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left:25px; margin-right:25px">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left:25px">
 		<div class="container-fluid">
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="nav nav-pills nav-fill">
@@ -18,12 +17,19 @@
 				  <li class="nav-item">
 					<a class="nav-item nav-link" title="Главная страница" href="{% url 'Home' %}">Home</a>
 				  </li>
+
+				  {% if user.is_authenticated %}
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Статус авторизации">authorized as: {{user.username}}</a>
+				  </li>
+				  {% else %}
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Статус авторизации">not authorized</a>
+				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" title="Авторизация" href="{% url 'Login' %}">Login</a>
 				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Регистрация" href="{% url 'Registration' %}">Registration</a>
-				  </li>
+				  {% endif %}
 				  <li class="nav-item">
 					<a class="nav-item nav-link" title="Стоимости/коэффициенты" href="{% url 'Rates' %}">Rates</a>
 				  </li>
@@ -37,10 +43,8 @@
 					<a class="nav-item nav-link" title="Стендирование" href="{% url 'Poc' %}">PoC</a>
 				  </li>
 				</li>
-				<li class="nav-item">
-				  <a class="nav-item nav-link" title="Финальное КП" href="{% url 'Output' %}">Output</a>
-				</li>
-				  <!--  <li class="nav-item">
+
+				   <li class="nav-item">
 					<a class="nav-item nav-link" href="">Install</a>
 				  </li>
 				  <li class="nav-item">
@@ -67,27 +71,19 @@
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">BusinessTrip</a>
 				  </li>
+
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Rates</a>
-				  </li> -->
-				  {% if user.is_authenticated %}
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Статус авторизации">authorized as: {{user.username}}</a>
+					<a class="nav-item nav-link" title="Финальное КП" href="{% url 'Output' %}">Output</a>
 				  </li>
-				  {% else %}
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Статус авторизации">not authorized</a>
-				  </li>
-				  {% endif %}
+
 			</ul>
 		  </div>
 		</div>
 	  </nav>
 </head>
 
-	<body>
 	  {% block content %}
-    <div class="intro" style="margin-top:25px;">
+    <div class="intro">
       <div class="video">
           <video class="video__media" src="{% static 'coverr-typing.mp4' %}" autoplay muted loop></video>
       </div>
@@ -95,7 +91,11 @@
       <div class="intro__content">
             <div class="container">
 				<div class="visible">
-					<h1 class="intro_1">Приветствую тебя на сайте, который поможет тебе сформировать КП на работы! Для того чтобы сформировать КП необходимо пройтись по вкладкам, выбрать необходимые работы и указать количество рабочих дней. Затем можно софрмировать КП в формате Excel</h1>
+					<h3 class="intro_1">Инструкция для Presale-инженера</h3>
+					<h3 class="intro_1">Авторизоваться/Зарегестрироваться на сайте</h3>
+					<h3 class="intro_1">Указать сложность проекта для расчета трудозатрат</h3>
+					<h3 class="intro_1">Пройти по вкладкам в зависимости от того какие этапы работ необходимо выполнить, отметить типы работ, указать общее время работ по каждому этапу</h3>
+					<h3 class="intro_1">Отправить результат менеджеру проекта</h3>
 				</div>
 			</div>
       </div>
