--- a/presalesite/registration/templates/registration/register.html
+++ b/presalesite/registration/templates/registration/register.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
 
-{% block content %}
-  <h2>Register</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-  </form>
-{% endblock %}
 
+
+{% block content %}
+<div class="d-flex align-items-center justify-content-center" style="height: 100vh;">
+  <div class="card p-4">
+    <h2 class="text-center mb-4">Register</h2>
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary mt-3 btn-block" style="width: 50%;">Register</button>
+      </div>
+    </form>
+  </div>
+</div>
+{% endblock %}
 
     
