--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -9,7 +9,7 @@
 	{% block title %}
 	<title>PRE-SALE</title>
 	{% endblock %}
-	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left:25px;">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left:25px">
 		<div class="container-fluid">
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="nav nav-pills nav-fill">
