--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="{% static 'css/bootstrap_mainpage.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
