--- a/presalesite/output/templates/output/output_final.html
+++ b/presalesite/output/templates/output/output_final.html
@@ -44,7 +44,7 @@
     </body>
 
 </div>
-<a style="margin-top:20px; margin-left:20px;" class="btn btn-success" onclick="exportToExcel()">Скачать в формате Excel</a>
+<a style="margin-top:20px; margin-bottom:20px; margin-left:20px;" class="btn btn-success" onclick="exportToExcel()">Скачать в формате Excel</a>
 </div>
 
 <script>
