--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -1,87 +1,5 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
-	{% block title %}
-	<title>PRE-SALE</title>
-	{% endblock %}
-	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left:25px">
-		<div class="container-fluid">
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="nav nav-pills nav-fill">
-			<!--<ul class="nav flex-column"> --- gorizontal navbar --- -->
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Главная страница" href="{% url 'Home' %}">Home</a>
-				  </li>
-
-				  {% if user.is_authenticated %}
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Статус авторизации">authorized as: {{user.username}}</a>
-				  </li>
-				  {% else %}
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Статус авторизации">not authorized</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Авторизация" href="{% url 'Login' %}">Login</a>
-				  </li>
-				  {% endif %}
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Стоимости/коэффициенты" href="{% url 'Rates' %}">Rates</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Проектно-изыскательские работы" href="{% url 'Design' %}">Design</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Обследование СПД" href="{% url 'Examination' %}">Examination</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Стендирование" href="{% url 'Poc' %}">PoC</a>
-				  </li>
-				</li>
-
-				   <li class="nav-item">
-					<a class="nav-item nav-link" href="">Install</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Comissioning</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Accept</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Migration</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Other Jobs</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Subcontractor</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Other</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Unexpected</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">BusinessTrip</a>
-				  </li>
-
-				  <li class="nav-item">
-					<a class="nav-item nav-link" title="Финальное КП" href="{% url 'Output' %}">Output</a>
-				  </li>
-
-			</ul>
-		  </div>
-		</div>
-	  </nav>
-</head>
-
 	  {% block content %}
     <div class="intro">
       <div class="video">
@@ -101,5 +19,3 @@
       </div>
   </div>
 	  {% endblock %}
-	</body>
-</html>
