--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -43,9 +43,8 @@
 					<a class="nav-item nav-link" title="Стендирование" href="{% url 'Poc' %}">PoC</a>
 				  </li>
 				</li>
-
-				   <li class="nav-item">
-					<a class="nav-item nav-link" href="">Install</a>
+				<li class="nav-item">
+					<a class="nav-item nav-link" title="Монтажные работы" href="{% url 'Install' %}">Install</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Comissioning</a>
