--- a/presalesite/registration/templates/registration/login.html
+++ b/presalesite/registration/templates/registration/login.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="d-flex align-items-center justify-content-center" style="height: 50vh;">
-  <div class="text-center ml-auto">
-    <h2 style="margin-left:60px;">Login</h2>
+<div style="text-align: center;">
+  <div style="width: 500px; display: inline-block;">
+    <h2 style="margin-top:200px; margin-left:40px;">Login</h2>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <div class="d-flex flex-column">
-        <button type="submit" class="btn btn-primary mt-3 btn-sm btn-block" style="width: 70%; margin-left:90px;">Login</button>
-        <a class="btn btn-secondary mt-3 btn-sm btn-block" style="width: 70%; margin-left:90px;" href="{% url 'Registration' %}">Register</a>
+      <div>
+        <button type="submit" class="btn btn-primary btn-block" style="margin-left: 80px; width: 250px;">Login</button><br>
+        <a class="btn btn-secondary btn-block" href="{% url 'Registration' %}" style="margin-top: 10px; margin-left: 80px; width: 250px;">Register</a>
       </div>
     </form>
   </div>
