--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -22,6 +22,9 @@
 				  <li class="nav-item">
 					<a class="nav-item nav-link" title="Статус авторизации">authorized as: {{user.username}}</a>
 				  </li>
+				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Выйти" href="{% url 'Logout' %}">Logout</a>
+				  </li>	
 				  {% else %}
 				  <li class="nav-item">
 					<a class="nav-item nav-link" title="Статус авторизации">not authorized</a>
