--- a/presalesite/registration/templates/registration/login.html
+++ b/presalesite/registration/templates/registration/login.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="text-align: center;">
-  <div style="width: 500px; display: inline-block;">
-    <h2 style="margin-top:200px; margin-left:40px;">Login</h2>
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+  <div style="width: 250px;">
+    <!-- <h2 style="margin-top:200px;">Login</h2> -->
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <div>
-        <button type="submit" class="btn btn-primary btn-block" style="margin-left: 80px; width: 250px;">Login</button><br>
-        <a class="btn btn-secondary btn-block" href="{% url 'Registration' %}" style="margin-top: 10px; margin-left: 80px; width: 250px;">Register</a>
+        <button type="submit" class="btn btn-primary btn-block" style="width: 250px;">Login</button><br>
+        <a class="btn btn-secondary btn-block" href="{% url 'Registration' %}" style="margin-top: 10px; width: 250px;">Register</a>
       </div>
     </form>
   </div>
