--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -36,7 +36,7 @@
 					<a class="nav-item nav-link" title="Монтажные работы" href="{% url 'Install' %}">Install</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Comissioning</a>
+					<a class="nav-item nav-link" title="Пуско-наладочные работы" href="{% url 'Commissioning' %}">Commissioning</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Accept</a>
