--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -39,7 +39,7 @@
 					<a class="nav-item nav-link" title="Пуско-наладочные работы" href="{% url 'Commissioning' %}">Commissioning</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Accept</a>
+					<a class="nav-item nav-link" title="Приемо-сдаточные испытания" href="{% url 'Accept' %}">Accept</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Migration</a>
