--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -42,7 +42,7 @@
 					<a class="nav-item nav-link" title="Приемо-сдаточные испытания" href="{% url 'Accept' %}">Accept</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Migration</a>
+					<a class="nav-item nav-link" title="Миграция" href="{% url 'Migration' %}">Migration</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Other Jobs</a>
