--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -45,7 +45,7 @@
 					<a class="nav-item nav-link" title="Миграция" href="{% url 'Migration' %}">Migration</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Other Jobs</a>
+					<a class="nav-item nav-link" title="Прочие работы" href="{% url 'Other_jobs' %}">Other Jobs</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Subcontractor</a>
