--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -48,7 +48,7 @@
 					<a class="nav-item nav-link" title="Прочие работы" href="{% url 'Other_jobs' %}">Other Jobs</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Subcontractor</a>
+					<a class="nav-item nav-link" title="Подрядчик" href="{% url 'Subcontractor' %}">Subcontractor</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Other</a>
