--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -3,7 +3,7 @@
 	  {% block content %}
     <div class="intro">
       <div class="video">
-          <video class="video__media" src="{% static 'coverr-typing.mp4' %}" autoplay muted loop></video>
+          <video class="video__media" src="{% static 'video/coverr-typing.mp4' %}" autoplay muted loop></video>
       </div>
 
       <div class="intro__content">
