correct index and debug

--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -9,11 +9,11 @@
       <div class="intro__content">
             <div class="container">
 				<div class="visible">
-					<h3 class="intro_1">Инструкция для Presale-инженера</h3>
-					<h3 class="intro_1">Авторизоваться/Зарегестрироваться на сайте</h3>
-					<h3 class="intro_1">Указать сложность проекта для расчета трудозатрат</h3>
-					<h3 class="intro_1">Пройти по вкладкам в зависимости от того какие этапы работ необходимо выполнить, отметить типы работ, указать общее время работ по каждому этапу</h3>
-					<h3 class="intro_1">Отправить результат менеджеру проекта</h3>
+					<h3 class="intro_1" style="font-size: 30px;">Инструкция для Presale-инженера, менеджера проекта</h3>
+					<h3 class="intro_1" style="font-size: 30px;">Чтобы рассчитать стоимость работ по проекту необходимо:</h3>
+					<h3 class="intro_1" style="font-size: 30px;">Указать сложность проекта для расчета трудозатрат на вкладке Rates</h3>
+					<h3 class="intro_1" style="font-size: 30px;">На каждой вкладке отметить типы работ и срок выполнения</h3>
+					<h3 class="intro_1" style="font-size: 30px;">На вкладке Output можно скачать готовое КП с расчетом стоимости</h3>
 				</div>
 			</div>
       </div>
