--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -51,7 +51,7 @@
 					<a class="nav-item nav-link" title="Подрядчик" href="{% url 'Subcontractor' %}">Subcontractor</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Other</a>
+					<a class="nav-item nav-link" title="Расходники" href="{% url 'Other' %}">Other</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-item nav-link" href="">Unexpected</a>
