--- a/presalesite/rates/templates/rates/rates_list.html
+++ b/presalesite/rates/templates/rates/rates_list.html
@@ -27,7 +27,7 @@
 
         <details>
             <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
-            >Необходимо скорректировать стоимость одного рабочего дня каждого из специалистов если это необоходимо (выставлены значения по умолчнию): 
+            >Необходимо скорректировать стоимость одного рабочего дня каждого из специалистов если это необходимо (выставлены значения по умолчнию): 
             </summary>
         <ul>
           <li>
