--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -54,10 +54,7 @@
 					<a class="nav-item nav-link" title="Расходники" href="{% url 'Other' %}">Other</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">Unexpected</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-item nav-link" href="">BusinessTrip</a>
+					<a class="nav-item nav-link" title="Командировочные расходы" href="{% url 'BusinessTrip' %}">BusinessTrip</a>
 				  </li>
 
 				  <li class="nav-item">
