--- a/presalesite/accept/templates/accept/accept_list.html
+++ b/presalesite/accept/templates/accept/accept_list.html
@@ -12,7 +12,7 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Приемо-сдаточные испытания
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Приемо-сдаточные испытания" name="Приемо-сдаточные испытания" required />
+      <input type="number" step="0.1" id="Приемо-сдаточные испытания" name="Приемо-сдаточные испытания" placeholder="кол-во дней" style="width: 120px;" required />
       </summary>
       <ul>
         <li class="item1">
