--- a/presalesite/commissioning/templates/commissioning/commissioning_list.html
+++ b/presalesite/commissioning/templates/commissioning/commissioning_list.html
@@ -12,7 +12,7 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Пуско-наладочные работы
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Пуско-наладочные работы" name="Пуско-наладочные работы" required />
+      <input type="number" step="0.1" id="Пуско-наладочные работы" name="Пуско-наладочные работы" placeholder="кол-во дней" style="width: 120px;" required />
       </summary>
       <ul>
         <li class="item1">
