--- a/presalesite/examination/templates/examination/examination_list.html
+++ b/presalesite/examination/templates/examination/examination_list.html
@@ -12,7 +12,7 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Обследование СПД
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Обследование СПД" name="Обследование СПД" required />
+      <input type="number" step="0.1" id="Обследование СПД" name="Обследование СПД" placeholder="кол-во дней" style="width: 120px;" required />
       </summary>
       <ul>
         <li class="item1">
