--- a/presalesite/migration/templates/migration/migration_list.html
+++ b/presalesite/migration/templates/migration/migration_list.html
@@ -12,7 +12,7 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Миграция
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Миграция" name="Миграция" required />
+      <input type="number" step="0.1" id="Миграция" name="Миграция" placeholder="кол-во дней" style="width: 120px;" required />
       </summary>
       <ul>
         <li>
