--- a/presalesite/install/templates/install/install_list.html
+++ b/presalesite/install/templates/install/install_list.html
@@ -12,31 +12,31 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Монтажные работы
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Монтажные работы" name="Монтажные работы" placeholder="кол-во дней" style="width: 120px;" required />
-      </summary>
+      <input type="number" step="0.1" id="Монтажные работы" name="Монтажные работы" placeholder="кол-во дней" style="width: 120px;" required value="{{ installs.0.days }}"/>
+    </summary>
       <ul>
         <li class="item1">
           <details style="background-color: rgb(172, 165, 165);">
             <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Монтаж оборудования в шкафах/стойках" value="Монтаж оборудования в шкафах/стойках">
+              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Монтаж оборудования в шкафах/стойках" value="Монтаж оборудования в шкафах/стойках" {% if 'Монтаж оборудования в шкафах/стойках' in names %} checked {% endif %}>
               Монтаж оборудования в шкафах/стойках
             </summary> 
             <ul>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Монтаж оборудования в телекоммуникационных шкафах" value="Монтаж оборудования в телекоммуникационных шкафах">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Монтаж оборудования в телекоммуникационных шкафах" value="Монтаж оборудования в телекоммуникационных шкафах" {% if 'Монтаж оборудования в телекоммуникационных шкафах' in names %} checked {% endif %}>
                     Монтаж оборудования в телекоммуникационных шкафах
                   </summary>
                 </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подключение кабелей электропитания и маркировка кабелей" value="Подключение кабелей электропитания и маркировка кабелей">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подключение кабелей электропитания и маркировка кабелей" value="Подключение кабелей электропитания и маркировка кабелей" {% if 'Подключение кабелей электропитания и маркировка кабелей' in names %} checked {% endif %}>
                     Подключение кабелей электропитания и маркировка кабелей
                   </summary>
               </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Прокладка коммутация и маркировка кабелей (патчкордов)" value="Прокладка коммутация и маркировка кабелей (патчкордов)">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Прокладка коммутация и маркировка кабелей (патчкордов)" value="Прокладка коммутация и маркировка кабелей (патчкордов)" {% if 'Прокладка коммутация и маркировка кабелей (патчкордов)' in names %} checked {% endif %}>
                     Прокладка коммутация и маркировка кабелей (патчкордов)
                   </summary>
               </li>
@@ -47,13 +47,13 @@
         <li>
           <details style="background-color: rgb(172, 165, 165);">
             <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Монтаж точек доступа" value="Монтаж точек доступа">
+              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Монтаж точек доступа" value="Монтаж точек доступа" {% if 'Монтаж точек доступа' in names %} checked {% endif %}>
               Монтаж точек доступа
               </summary> 
               <ul>
                 <li>
                     <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                      <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Монтаж и подключение точек доступа WLAN" value="Монтаж и подключение точек доступа WLAN">
+                      <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Монтаж и подключение точек доступа WLAN" value="Монтаж и подключение точек доступа WLAN" {% if 'Монтаж и подключение точек доступа WLAN' in names %} checked {% endif %}> 
                       Монтаж и подключение точек доступа WLAN
                     </summary>
                   </li>
@@ -65,19 +65,19 @@
         <details style="background-color: rgb(172, 165, 165);"> 
 
           <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-            <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Демонтаж оборудования" value="Демонтаж оборудования">
+            <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Демонтаж оборудования" value="Демонтаж оборудования" {% if 'Демонтаж оборудования' in names %} checked {% endif %}>
             Демонтаж оборудования
             </summary> 
             <ul>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отключение кабелей питания/заземления/патчкордов от оборудования" value="Отключение кабелей питания/заземления/патчкордов от оборудования">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отключение кабелей питания/заземления/патчкордов от оборудования" value="Отключение кабелей питания/заземления/патчкордов от оборудования" {% if 'Отключение кабелей питания/заземления/патчкордов от оборудования' in names %} checked {% endif %}>
                     Отключение кабелей питания/заземления/патчкордов от оборудования
                   </summary>
                 </li>
                 <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Демонтаж выведенного из строя телекоммуникационного оборудования" value="Демонтаж выведенного из строя телекоммуникационного оборудования">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Демонтаж выведенного из строя телекоммуникационного оборудования" value="Демонтаж выведенного из строя телекоммуникационного оборудования" {% if 'Демонтаж выведенного из строя телекоммуникационного оборудования' in names %} checked {% endif %}>
                     Демонтаж выведенного из строя телекоммуникационного оборудования
                   </summary>
                 </li>
@@ -86,13 +86,13 @@
       <details style="background-color: rgb(172, 165, 165);">
 
         <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-          <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Прочие монтажные работы" value="Прочие монтажные работы">
+          <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Прочие монтажные работы" value="Прочие монтажные работы" {% if 'Прочие монтажные работы' in names %} checked {% endif %}>
           Прочие монтажные работы
           </summary> 
           <ul>
             <li>
                 <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Коммутация оконечных устройств (серверы/ПК/АРМ) на патч-панели" value="Коммутация оконечных устройств (серверы/ПК/АРМ) на патч-панели">
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Коммутация оконечных устройств (серверы/ПК/АРМ) на патч-панели" value="Коммутация оконечных устройств (серверы/ПК/АРМ) на патч-панели" {% if 'Коммутация оконечных устройств (серверы/ПК/АРМ) на патч-панели' in names %} checked {% endif %}>
                   Коммутация оконечных устройств (серверы/ПК/АРМ) на патч-панели
                 </summary>
               </li>
