add check-box and edit Accept

--- a/presalesite/accept/templates/accept/accept_final.html
+++ b/presalesite/accept/templates/accept/accept_final.html
@@ -23,10 +23,8 @@
             </tbody>
           </table>
     </body>
-    <h6 style="margin-left:20px; margin-top:20px; font-weight: bold; cursor: pointer;" >Если передумал, данные можно стереть</h6>
-
 </div>
-<a style="margin-top:5px; margin-left:20px;" class="btn btn-danger" href='delete'>Стереть</a>
+<a style="margin-top:5px; margin-left:20px;" class="btn btn-danger" href='/accept'>Редактировать</a>
 </div>
 
 
