--- a/presalesite/accept/templates/accept/accept_list.html
+++ b/presalesite/accept/templates/accept/accept_list.html
@@ -12,31 +12,31 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Приемо-сдаточные испытания
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Приемо-сдаточные испытания" name="Приемо-сдаточные испытания" placeholder="кол-во дней" style="width: 120px;" required />
+      <input type="number" step="0.1" id="Приемо-сдаточные испытания" name="Приемо-сдаточные испытания" placeholder="кол-во дней" style="width: 120px;" required value="{{ accepts.0.days }}"/>
       </summary>
       <ul>
         <li class="item1">
           <details style="background-color: rgb(172, 165, 165);">
             <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Проведение приемо-сдаточных испытани" value="Проведение приемо-сдаточных испытани">
+              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Проведение приемо-сдаточных испытани" value="Проведение приемо-сдаточных испытани" {% if 'Проведение приемо-сдаточных испытани' in names %} checked {% endif %}>
               Проведение приемо-сдаточных испытани
             </summary> 
             <ul>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Проведение предварительных испытаний" value="Проведение предварительных испытаний">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Проведение предварительных испытаний" value="Проведение предварительных испытаний" {% if 'Проведение предварительных испытаний' in names %} checked {% endif %}>
                     Проведение предварительных испытаний
                   </summary>
                 </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Опытная эксплуатация" value="Опытная эксплуатация">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Опытная эксплуатация" value="Опытная эксплуатация" {% if 'Опытная эксплуатация' in names %} checked {% endif %}>
                     Опытная эксплуатация
                   </summary>
               </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Проведение приёмочных испытаний" value="Проведение приёмочных испытаний">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Проведение приёмочных испытаний" value="Проведение приёмочных испытаний" {% if 'Проведение приёмочных испытаний' in names %} checked {% endif %}>
                     Проведение приёмочных испытаний
                   </summary>
               </li>
