--- a/presalesite/other_jobs/templates/other_jobs/other_jobs_list.html
+++ b/presalesite/other_jobs/templates/other_jobs/other_jobs_list.html
@@ -12,7 +12,7 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Прочие работы
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Прочие работы" name="Прочие работы" placeholder="кол-во дней" style="width: 120px;" required required value="{{ other_jobs.0.days }}"/>
+      <input type="number" step="0.1" id="Прочие работы" name="Прочие работы" placeholder="кол-во дней" style="width: 120px;" required value="{{ other_jobs.0.days }}"/>
       </summary>
       <ul>
         <li class="item1">
