--- a/presalesite/subcontractor/templates/subcontractor/subcontractor_final.html
+++ b/presalesite/subcontractor/templates/subcontractor/subcontractor_final.html
@@ -26,10 +26,8 @@
           </table>
 
     </body>
-    <h6 style="margin-left:20px; margin-top:20px; font-weight: bold; cursor: pointer;" >Если передумал, данные можно стереть</h6>
-
 </div>
-<a style="margin-top:5px; margin-left:20px;" class="btn btn-danger" href='delete'>Стереть</a>
+<a style="margin-top:5px; margin-left:20px;" class="btn btn-danger" href='/subcontractor'>Редактировать</a>
 </div>
 
 
