--- a/presalesite/other/templates/other/other_list.html
+++ b/presalesite/other/templates/other/other_list.html
@@ -12,7 +12,7 @@
         <ul>
           <li>
             <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">  
-              <input style="width: 218px; text-align: left;" type="number" id="Общая стоимость расходных материалов" name="Общая стоимость расходных материалов" placeholder="Общая стоимость, руб." value="" required/>
+              <input style="width: 218px; text-align: left;" type="number" id="Общая стоимость расходных материалов" name="Общая стоимость расходных материалов" placeholder="Общая стоимость, руб." required value="{{ total_price.0.total_price }}"/>
             </summary>
           </li>
         </ul>
