add edit BusinessTrip

--- a/presalesite/businesstrip/templates/businesstrip/businesstrip_final.html
+++ b/presalesite/businesstrip/templates/businesstrip/businesstrip_final.html
@@ -19,7 +19,7 @@
             <tbody>
               {% for data in perechen %}
               <tr>
-                <td style="border: 1px solid black; text-align: center;" >{{data.duration}}</td>
+                <td style="border: 1px solid black; text-align: center;" >{{data.duration_trip}}</td>
                 <td style="border: 1px solid black; text-align: center;" >{{data.ticket_cost}}</td>
                 <td style="border: 1px solid black; text-align: center;" >{{data.hotel_cost}}</td>
                 <td style="border: 1px solid black; text-align: center;" >{{data.daily_allowance}}</td>
@@ -30,10 +30,8 @@
           </table>
 
     </body>
-    <h6 style="margin-left:20px; margin-top:20px; font-weight: bold; cursor: pointer;" >Если передумал, данные можно стереть</h6>
-
 </div>
-<a style="margin-top:5px; margin-left:20px;" class="btn btn-danger" href='delete'>Стереть</a>
+<a style="margin-top:5px; margin-left:20px;" class="btn btn-danger" href='/businesstrip'>Редактировать</a>
 </div>
 
 
