--- a/presalesite/businesstrip/templates/businesstrip/businesstrip_list.html
+++ b/presalesite/businesstrip/templates/businesstrip/businesstrip_list.html
@@ -13,7 +13,7 @@
           <li>
               <summary style="margin-left:30px; font-weight:normal; cursor: pointer;">
                 Количество дней в командировке    
-                <input style="width: 100px; text-align: right;" type="number" step="1" id="Количество дней в командировке" name="Количество дней в командировке" required/>
+                <input style="width: 100px; text-align: right;" type="number" step="1" id="Количество дней в командировке" name="Количество дней в командировке" required value="{{ duration_trip.0.duration_trip }}"/>
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
             </li>
@@ -21,21 +21,21 @@
           <li>
             <summary style="margin-left:30px; font-weight:normal; cursor: pointer;">
               Стоимость билетов, руб.
-                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Стоимость билетов, руб." name="Стоимость билетов, руб." required/>
+                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Стоимость билетов, руб." name="Стоимость билетов, руб." required value="{{ ticket_cost.0.ticket_cost }}"/>
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
           </li>
           <li>
             <summary style="margin-left:30px; font-weight:normal; cursor: pointer;">
               Стоимость гостиницы, руб.
-                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Стоимость гостиницы, руб." name="Стоимость гостиницы, руб." required/>
+                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Стоимость гостиницы, руб." name="Стоимость гостиницы, руб." required value="{{ hotel_cost.0.hotel_cost }}"/>
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
           </li>
           <li>
             <summary style="margin-left:30px; font-weight:normal; cursor: pointer;">
               Норма суточных, руб.
-                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Норма суточных, руб." name="Норма суточных, руб." value="1000.00"/>
+                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Норма суточных, руб." name="Норма суточных, руб." required value="{{ daily_allowance.0.daily_allowance }}"/>
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
           </li>
