add delete_all for output

--- a/presalesite/presalesite/templates/presalesite/index.html
+++ b/presalesite/presalesite/templates/presalesite/index.html
@@ -6,14 +6,20 @@
           <video class="video__media" src="{% static 'video/coverr-typing.mp4' %}" autoplay muted loop></video>
       </div>
 
+	  
+
       <div class="intro__content">
             <div class="container">
 				<div class="visible">
-					<h3 class="intro_1" style="font-size: 30px;">Инструкция для Presale-инженера, менеджера проекта</h3>
-					<h3 class="intro_1" style="font-size: 30px;">Чтобы рассчитать стоимость работ по проекту необходимо:</h3>
-					<h3 class="intro_1" style="font-size: 30px;">Указать сложность проекта для расчета трудозатрат на вкладке Rates</h3>
-					<h3 class="intro_1" style="font-size: 30px;">На каждой вкладке отметить типы работ и срок выполнения</h3>
-					<h3 class="intro_1" style="font-size: 30px;">На вкладке Output можно скачать готовое КП с расчетом стоимости</h3>
+					{% for message in messages %}
+					<h3 class="intro_1" style="font-size: 30px; color: yellow; padding: 10px;">{{ message }}</h3>
+				  	{% endfor %}
+					<h3 class="intro_1" style="font-size: 30px;">Инструкция для presale-инженера и менеджера проекта:</h3>
+					<h3 class="intro_1" style="font-size: 30px;">1. Укажите сложность проекта на вкладке "Rates".</h3>
+					<h3 class="intro_1" style="font-size: 30px;">2. На каждой вкладке отметьте типы работ и их сроки выполнения.</h3>
+					<h3 class="intro_1" style="font-size: 30px;">3. При необходимости заполнить данные по командировке и о подрядчике. </h3>
+					<h3 class="intro_1" style="font-size: 30px;">4. На вкладке "Output" проверьте содержимое КП.</h3>
+					<h3 class="intro_1" style="font-size: 30px;">5. Скачайте готовое КП в формате Excel.</h3>
 				</div>
 			</div>
       </div>
