--- a/presalesite/output/templates/output/output_final.html
+++ b/presalesite/output/templates/output/output_final.html
@@ -64,6 +64,7 @@
 
 </div>
 <a style="margin-top:20px; margin-bottom:20px; margin-left:20px;" class="btn btn-success" onclick="exportToExcel()">Скачать в формате Excel</a>
+<a style="margin-top:20px; margin-bottom:20px; margin-left:20px;" class="btn btn-danger" href="delete_all" onclick="return confirm('Вы уверены что хотите удалить все записи?')">Удалить все записи</a>
 </div>
 
 <script>
